--- a/objectives.html
+++ b/objectives.html
@@ -1,2 +1,16 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <title>Login</title>
+  <script src="login.js"></script>
+</head>
+<body>
+  <h1>Login</h1>
+  <form id="loginForm">
+    <input type="text" id="username" placeholder="Username" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+  </form>
+</body>
+</html>
 
