--- a/objectives.html
+++ b/objectives.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Login</title>
-  <script src="login.js"></script>
+  <script src="code3.js"></script>
 </head>
 <body>
   <h1>Login</h1>
